[project]
description = "A pure python, declarative binary protocol parser & generator using dataclasses and type hinting."
name = "bytechomp"
version = "0.4.0"
# authors = ["Andrew Spittlemeister <andrew.spittlemeister@pm.me>"]
homepage = "https://github.com/AndrewSpittlemeister/bytechomp"
include = [
  "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndrewSpittlemeister/bytechomp"
requires-python = ">=3.10"

[tool.black]
check = true
diff = true
line-length = 100
verbose = true

[tool.ruff]
line-length = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
  "duplicate-code",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
